--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fs": "0.0.1-security",
     "knex": "^2.4.2",
     "multer": "^1.4.5-lts.1",
