--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.1-security",
     "knex": "^2.4.2",
     "multer": "^1.4.5-lts.1",
+    "node-modules": "^1.0.1",
     "socket.io": "^4.7.1",
     "sqlite3": "^5.1.6"
   },
